<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_contrast"
    tools:context=".ui.quiz.Quiz">

    <View
        android:id="@+id/view4"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:background="@drawable/bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view5"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/bg_contrast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timer" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="26dp"
        android:drawableLeft="@drawable/roundable"
        android:drawablePadding="10dp"

        android:text="24"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/questionCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:drawableRight="@drawable/roundbox"
        android:drawablePadding="10dp"

        android:text="1/10"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:drawableTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/question"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"

        android:gravity="center"
        android:text="lkafeiaslekfajeifa ld jalei aldf jeif aldk aei"
        android:textColor="@color/text_color"
        android:fontFamily="@font/sutonnymj_regular"

        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/view5"
        app:layout_constraintEnd_toEndOf="@+id/view5"
        app:layout_constraintStart_toStartOf="@+id/view5"
        app:layout_constraintTop_toTopOf="@+id/view5" />


    <RadioGroup android:id="@+id/options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/view5"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >

        <RadioButton android:id="@+id/optionA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rule_title"
            style="@style/radio_btn_style"
            android:background="@drawable/bg_round"
            />

        <RadioButton android:id="@+id/optionB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rule_title"
            style="@style/radio_btn_style"
            android:background="@drawable/bg_round"/>

        <RadioButton android:id="@+id/optionC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rule_title"
            style="@style/radio_btn_style"
            android:background="@drawable/bg_round"/>

        <RadioButton android:id="@+id/optionD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rule_title"
            style="@style/radio_btn_style"
            android:background="@drawable/bg_round"/>

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/options"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:weightSum="1"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        >


        <Button
            android:id="@+id/preBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:text="@string/btnPrevText"
            android:backgroundTint="@color/black"
            android:layout_weight=".4"
            android:layout_marginEnd="10dp"
            />

        <Button
            android:id="@+id/nextBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".4"
            android:text="@string/btnNextText"
            android:backgroundTint="@color/contrast_color"
            android:layout_marginStart="10dp"
            />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>